--- a/web/personalpage.html
+++ b/web/personalpage.html
@@ -90,6 +90,48 @@
                 
         </div>
     </div>
+    <h1 class="heading"><span>my</span>skills</h1>
+
+    <div class="row-2">
+    <div class="skills">
+    <div class="progress">
+        <h3>web design <span>95%</span></h3>
+        <div class="bar"><span></span></div>
+    </div>
+
+    <div class="progress">
+        <h3>web development <span>80%</span></h3>
+        <div class="bar"><span></span></div>
+    </div>
+    <div class="progress">
+        <h3>UI design<span>75%</span></h3>
+        <div class="bar"><span></span></div>
+    </div>
+    <div class="progress">
+        <h3>seo marketing<span>85%</span></h3>
+        <div class="bar"><span></span></div>
+    </div>
+    </div>
+
+    <div class="box-container">
+        <div class="box">
+            <h3> >> 2+ </h3>
+            <p>years of experience</p>
+        </div>
+        <div class="box">
+            <h3> >> 250+ </h3>
+            <p>happy clients</p>
+        </div>
+        <div class="box">
+            <h3> >> 150+ </h3>
+            <p>projects completed</p>
+        </div>
+        <div class="box">
+            <h3> >> 12+ </h3>
+            <p>awards won</p>
+        </div>
+    </div>
+    </div>
    </section>
     <script src="../assets/js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
